service-mesh/istio/sample/httpbin/3-httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    
spec:
  rules:
  - host: httpbin.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /
