service-mesh/istio/sample/httpbin/4-ssl-httpbin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ssl-httpbin-gw
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ssl-certs # must be the same as secret
    hosts:
    - ssl-exmple.kind-clstr.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssl-httpbin-vs
spec:
  hosts:
  - "ssl-exmple.kind-clstr.com"
  gateways:
  - ssl-httpbin-gw
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
